# oneil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  install.bat  install.sh  pyproject.toml
.cursor/rules/: rust-rewrite.mdc  vscode-extension.mdc
.githooks/: README.md  post-commit  pre-commit  pre-push
.github/workflows/: guide.yml  release.yml  rust-pr.yml
docs/: README.md  architecture.md  guide-outline.md  installation.md  migration_guide.md  principles.md
docs/architecture/: README.md  design-overlays.md
docs/decisions/: 2026-04-24-two-pass-instance-graph.md  2026-05-07-rendered-view-json-schema.md
docs/guide/: 00-overview.md  01-installation.md  01-overview.md  02-installation.md  02-parameters.md  03-parameters.md  03-tests.md  04-units.md  04-value-types.md  05-units.md  06-intervals.md  06-tests.md  07-notes.md  08-importing-models.md  09-importing-python.md  Untitled  a-python-api.md  book.toml
docs/guide/src/: 05-units.md  (+13 more)
docs/specs/: design-overlays-implementation.md  designs-and-imports.md  grammar.ebnf
examples/: oneil_cylinder.on  oneil_cylinder.one
src-rs/oneil/: Cargo.toml
src-rs/oneil_ast/: Cargo.toml
src-rs/oneil_ast/src/: declaration.rs  expression.rs  lib.rs  model.rs  model_name.rs  node.rs  parameter.rs  unit.rs
src-rs/oneil_builtins/: Cargo.toml
src-rs/oneil_cli/: Cargo.toml
src-rs/oneil_eval/: Cargo.toml
src-rs/oneil_frontend/: Cargo.toml  README.md
src-rs/oneil_ir/: Cargo.toml
src-rs/oneil_lsp/: Cargo.toml
src-rs/oneil_output/: Cargo.toml
src-rs/oneil_parser/: Cargo.toml
src-rs/oneil_python/: Cargo.toml
src-rs/oneil_resolver/: Cargo.toml
src-rs/oneil_runtime/: Cargo.toml
src-rs/oneil_shared/: Cargo.toml  README.md
src-rs/oneil_snapshot_tests/: Cargo.toml  README.md
src/oneil_analysis/: Cargo.toml
src/oneil_builtins/: Cargo.toml
src/oneil_builtins/src/: function.rs  prefix.rs  unit.rs  value.rs
src/oneil_eval/: README.md
src/oneil_ir/: Cargo.toml
src/oneil_output/: Cargo.toml
src/oneil_runtime/: Cargo.toml
src/oneil_shared/: README.md
src/oneil_snapshot_tests/: Cargo.toml
src/oneil_snapshot_tests/fixtures/: failing_test.on  syntax_error.on
src/oneil_snapshot_tests/src/snapshots/: oneil_snapshot_tests__test__basic_model_snapshot.snap  oneil_snapshot_tests__test__failing_test_snapshot.snap  oneil_snapshot_tests__test__syntax_error_snapshot.snap
tools/: update_to_0.16.py
vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
vscode/docs/: CONTRIBUTING.md
vscode/src/: extension.ts
(+519 files in other folders)
